# footballdb2wikidata

./: setup.cfg
src/footballdb2wikidata/: parse_football_format.py
src/footballdb2wikidata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/footballdb2wikidata/dicts/: __init__.py  method.json  player.json  stadium.json  team.json  time.json
test/: conftest.py  sample.txt  test_parse_football_format.py
