

[metadata]
name = footballdb2wikidata
version = 0.0.1-dev
description = 
long_description = file: README.md
long_description_content_type = text/markdown

license_file = LICENSE

[options]
install_requires =
    wdcuration
    dataclasses
    pathlib

zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

